--- a/fourth/src/main/resources/application.properties
+++ b/fourth/src/main/resources/application.properties
@@ -4,3 +4,11 @@ server.ssl.keyStoreType=PKCS12
 server.ssl.keyAlias=spring
 server.port=8443
 server.http2.enabled=true
+
+as.name=ansang
+as.age=${random.int(0,100)}
+as.fullName=${as.name} yu
+spring.profiles.active=test
+
+spring.output.ansi.enabled=always
+logging.path=logs
